--- a/.github/workflows/iarm_azure-deploy.yml
+++ b/.github/workflows/iarm_azure-deploy.yml
@@ -2,10 +2,13 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - iarm-backend-api
+name: IARM CI/CD
 
 on:
   push:
+    branches:
+      - IARM_azure-deploy
+  pull_request:
     branches:
       - IARM_azure-deploy
   workflow_dispatch:
@@ -34,18 +37,41 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'latest'
+      
+      - name: Install Electron dependencies
+        run: |
+          cd electron-app
+          npm install
 
-      - name: Upload artifact for deployment jobs
+      - name: Build Electron App
+        run: |
+          cd electron-app
+          npm run build:win
+
+      - name: Create artifacts directory
+        run: |
+          mkdir -p dist/artifacts
+          cp electron-app/dist/*.exe ./dist/artifacts
+
+      - name: Zip FastAPI app
+        run: zip -r dist/artifacts/iarm-backend-api.zip ./fastapi-app
+
+      - name: Zip Electron app
+        run: zip -r dist/artifacts/iarm-electron-app.zip ./electron-app
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: python-app
+          name: iarm-artifacts
           path: |
-            release.zip
+            ./dist/artifacts/
             !venv/
 
-  deploy:
+  deploy_backend:
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -56,10 +82,10 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: python-app
+          name: iarm-artifacts
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip iarm-backend-api.zip
 
       
       - name: 'Deploy to Azure Web App'
