--- a/.github/workflows/iarm_azure-deploy.yml
+++ b/.github/workflows/iarm_azure-deploy.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_backend:
     runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
