--- a/.github/workflows/iarm_azure-deploy.yml
+++ b/.github/workflows/iarm_azure-deploy.yml
@@ -55,7 +55,7 @@ jobs:
 
   deploy_backend:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_backend
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
