fixed: Deployment zipping the startup.sh forAzure as well

--- a/.github/workflows/iarm_azure-deploy.yml
+++ b/.github/workflows/iarm_azure-deploy.yml
@@ -43,7 +43,7 @@ jobs:
           node-version: 'latest'
 
       - name: Zip Backend app
-        run: zip -r fastapi-app.zip ./fastapi-app
+        run: zip -r fastapi-app.zip ./fastapi-app ./requirements.txt ./startup.sh ./.gitignore ./.github
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
