--- a/.github/workflows/iarm_azure-deploy.yml
+++ b/.github/workflows/iarm_azure-deploy.yml
@@ -110,3 +110,52 @@ jobs:
         with:
           name: electron-windows
           path: electron-app/dist/*.exe
+  
+  Release_Project:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+
+    needs: [deploy_backend, build_windows_electron-app]
+    steps:
+      - name: Download backend artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: iarm-artifacts
+
+      - name: Download Windows build
+        uses: actions/download-artifact@v4
+        with:
+          name: electron-windows
+      
+      - name: Create zip for release
+        run: |
+          mkdir release
+          mv fastapi-app.zip release/
+          mv *.exe release/
+          cd release
+          zip -r iarm-release.zip .
+
+      - name: Test artifact download
+        run: ls -R
+      
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: IARM Release v${{ github.run_number }}
+          tag_name: v${{ github.run_number }}
+          files: release/iarm-release.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  repository_mirroring:
+    runs-on: ubuntu-latest
+    needs: [deploy_backend, build_windows_electron-app, Release_Project]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: pixta-dev/repository-mirroring-action@v1
+        with:
+          target_repo_url: git@github.com:EpitechPromo2026/G-EIP-700-PAR-7-1-eip-yvain.ye.git
+          ssh_private_key: ${{ secrets.GIT_SSH_PRIVATE_KEY }}
