--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -1,29 +1,53 @@
 {
-  "name": "electron-app",
-  "version": "1.0.0",
-  "description": "IARM desktop app in Electron JS",
-  "homepage": "https://github.com/Fylga/IARM#readme",
-  "bugs": {
-    "url": "https://github.com/Fylga/IARM/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Fylga/IARM.git"
-  },
-  "license": "ISC",
-  "author": "Joris FRANCIN, Yvain YE, Clément MARTIN",
-  "type": "commonjs",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "electron-builder build --mac --win --linux",
-    "build:mac": "electron-builder build --mac",
-    "build:win": "electron-builder build --win",
-    "build:linux": "electron-builder build --linux"
-  },
-  "devDependencies": {
-    "electron": "^35.1.5",
-    "electron-builder": "^26.0.12"
-  }
+	"name": "iarm-client",
+	"author": "EIP",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"main": "dist-electron/main.js",
+	"scripts": {
+		"dev": "npm-run-all --parallel dev:*",
+		"dev:react": "vite",
+		"dev:electron": "npm run transpile:electron && cross-env NODE_ENV=development electron .",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"transpile:electron": "tsc --project src/electron/tsconfig.json",
+		"dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64",
+		"dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64",
+		"dist:linux": "npm run transpile:electron && npm run build && electron-builder --linux --x64"
+	},
+	"dependencies": {
+		"@radix-ui/react-alert-dialog": "^1.1.4",
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.469.0",
+		"os-utils": "^0.0.14",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"recharts": "^2.12.7",
+		"tailwind-merge": "^2.6.0"
+	},
+	"devDependencies": {
+		"@playwright/test": "^1.47.2",
+		"@types/node": "^22.10.5",
+		"@types/os-utils": "^0.0.4",
+		"@types/react": "^18.3.8",
+		"@types/react-dom": "^18.3.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"autoprefixer": "^10.4.20",
+		"cross-env": "^7.0.3",
+		"electron": "^32.1.2",
+		"electron-builder": "^25.0.5",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.17",
+		"tailwindcss-animate": "^1.0.7",
+		"typescript": "^5.6.2",
+		"vite": "^5.4.7",
+		"vitest": "^2.1.1"
+	}
 }
