--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -22,18 +22,20 @@
 		"@radix-ui/react-dialog": "^1.1.4",
 		"@radix-ui/react-separator": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
+		"axios": "^1.8.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.469.0",
 		"os-utils": "^0.0.14",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-router-dom": "^7.5.0",
 		"recharts": "^2.12.7",
 		"tailwind-merge": "^2.6.0"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.47.2",
-		"@types/node": "^22.10.5",
+		"@types/node": "^22.14.1",
 		"@types/os-utils": "^0.0.4",
 		"@types/react": "^18.3.8",
 		"@types/react-dom": "^18.3.0",
