--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -46,6 +46,7 @@
 		"electron-builder": "^25.0.5",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.49",
+		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.6.2",
