--- a/.github/workflows/dev_iarm-dev.yml
+++ b/.github/workflows/dev_iarm-dev.yml
@@ -2,19 +2,22 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - iarm-backend-server
+name: Build and deploy Python app to Azure Web App
 
 on:
   push:
     branches:
       - dev
+  pull_request:
+    branches:
+      - dev
   workflow_dispatch:
 
 jobs:
-  build:
+  build_backend:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -34,29 +37,29 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip Backend for deployment
+        run: zip -r fastapi-app.zip ./fastapi-app ./requirements.txt ./startup.sh ./.gitignore ./.github
 
-      - name: Upload artifact for deployment jobs
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: python-app
+          name: iarm-artifacts
           path: |
-            release.zip
+            fastapi-app.zip
             !venv/
 
-  deploy:
+  deploy_backend:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_backend
     
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: python-app
+          name: iarm-artifacts
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip fastapi-app.zip
 
       
       - name: 'Deploy to Azure Web App'
@@ -64,5 +67,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'iarm-backend-server'
-          slot-name: 'Production'
+          slot-name: 'Development'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A96F1914DB634607A0123964FF41AE9B }}
