--- a/.github/workflows/iarm.yml
+++ b/.github/workflows/iarm.yml
@@ -7,11 +7,14 @@ name: Build and deploy Python app to Azure Web App - iarm-fastapi-app
 on:
   push:
     branches:
-      - main
+      - IARM_azure-deploy
+  pull_request:
+    branches:
+      - IARM_azure-deploy
   workflow_dispatch:
 
 jobs:
-  build:
+  build_backend:
     runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
@@ -34,29 +37,29 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip Backend app
+        run: zip -r fastapi-app.zip ./fastapi-app ./requirements.txt ./startup.sh ./.gitignore ./.github
 
-      - name: Upload artifact for deployment jobs
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: python-app
+          name: iarm-artifacts
           path: |
-            release.zip
+            fastapi-app.zip
             !venv/
 
-  deploy:
+  deploy_backend:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_backend
     
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: python-app
+          name: iarm-artifacts
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: unzip fastapi-app.zip
 
       
       - name: 'Deploy to Azure Web App'
