--- a/.github/workflows/iarm.yml
+++ b/.github/workflows/iarm.yml
@@ -7,10 +7,10 @@ name: Build and deploy Python app to Azure Web App - iarm-fastapi-app
 on:
   push:
     branches:
-      - IARM_azure-deploy
+      - main
   pull_request:
     branches:
-      - IARM_azure-deploy
+      - main
   workflow_dispatch:
 
 jobs:
