--- a/.github/workflows/iarm_azure-deploy.yml
+++ b/.github/workflows/iarm_azure-deploy.yml
@@ -84,7 +84,7 @@ jobs:
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'iarm-backend-api'
+          app-name: 'iarm-fastapi'
           slot-name: 'Production'
 
   build_windows_electron-app:
