--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -52,5 +52,9 @@
 		"typescript": "^5.6.2",
 		"vite": "^5.4.7",
 		"vitest": "^2.1.1"
-	}
+	},
+	"repository": {
+    "type": "git",
+    "url": "https://github.com/Fylga/IARM.git"
+  }
 }
