Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/iarm_azure-fn-app_iarm-fn-app.yml
+++ b/.github/workflows/iarm_azure-fn-app_iarm-fn-app.yml
@@ -53,10 +53,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -66,13 +63,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip     
         
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_44FBB7E4236F41328BBCB7E0F9722A56 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_70B33073F9374468BBA8B1247C793647 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B2AF5838DA8548678A38CE59BF91A7B7 }}
-
       - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
@@ -80,4 +70,6 @@ jobs:
           app-name: 'iarm-fn-app'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AC97917BC85C45108589D181DB1487B6 }}
+          sku: 'flexconsumption'
+        
